# ResumeForge

./: .env.example  .gitignore  PERFORMANCE-OPTIMIZATION.md  PHASE2-COMPLETE.md  PHASE7-COMPLETE.md  QUALITY-AUDIT.md  README.md  TEST-ENHANCEMENT-IMPLEMENTATION.md  TESTING-GUIDE.md  config.yaml  pyproject.toml  test_gemini.py
.cursor/: rules
Documentation/: ADR.md  CHANGES-SUMMARY.md  Configuration-Verification.md  Implementation-Roadmap.md  ResumeForge-Architecture-Documentation.docx  SAD.md  SDD.md  UserWorkFlow.md
Documentation/SDLC_Documents/: COST-OPTIMIZATION.md  PHASE1-COMPLETE.md  PHASE3-COMPLETE.md  PHASE4-COMPLETE.md  PHASE5-COMPLETE.md  PHASE6-COMPLETE.md  PHASE8-COMPLETE.md  QUALITY-SUMMARY.md
data/: evidence_card.schema.json  generate_evidence_cards_prompt.md
data/templates/: base.md
examples/: README.md  quick_schema_test.py  test_schemas_interactive.py
src/resumeforge/: __init__.py  cli.py  config.py  exceptions.py  orchestrator.py
src/resumeforge/agents/: __init__.py  auditor.py  base.py  evidence_mapper.py  jd_analyst.py  resume_writer.py
src/resumeforge/generators/: __init__.py  docx_generator.py
src/resumeforge/parsers/: __init__.py  fact_resume_parser.py  jd_parser.py
src/resumeforge/utils/: cache.py  (+4 more)
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: __init__.py  output_verification.py  sample_evidence_cards.json  sample_job_description.txt  sample_resume_template.md
tests/integration/: test_agents_integration.py  test_pipeline_e2e.py  test_providers_integration.py
tests/unit/: test_agents_auditor.py  test_agents_base.py  test_agents_evidence_mapper.py  test_agents_jd_analyst.py  test_agents_resume_writer.py  test_cli.py  test_cli_commands.py  test_feature_completeness.py  test_orchestrator.py  test_providers.py  test_schemas_blackboard.py  test_schemas_evidence_card.py
(+10 files in other folders)
