[project]
name = "resumeforge"
version = "0.1.0"
description = "Multi-agent resume optimization system with truthfulness guarantees"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Carlos A. Vazquez Morales" }]

dependencies = [
  "pydantic>=2.10.0,<3.0.0",
  "click>=8.1.0,<9.0.0",
  "python-docx>=1.1.0,<2.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "structlog>=24.1.0,<26.0.0",
  "httpx>=0.27.0,<1.0.0",
  "tenacity>=8.3.0,<10.0.0",

  # Provider SDKs
  "openai>=2.0.0,<3.0.0",
  "anthropic>=0.34.0,<1.0.0",
  "google-genai>=0.6.0,<2.0.0",
  "tiktoken>=0.8.0,<1.0.0",  # Token counting for OpenAI (per SDD Section 6.2)
  "groq>=0.9.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "pytest-asyncio>=0.23.0,<0.25.0",
  "mypy>=1.10.0,<2.0.0",
  "ruff>=0.5.0,<0.9.0",
  "types-PyYAML>=6.0.12.20240808",
  "types-python-dateutil>=2.9.0.20240316",
]

[project.scripts]
resumeforge = "resumeforge.cli:cli"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["resumeforge*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "google.genai.*",
  "groq.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=resumeforge --cov-report=term-missing"
asyncio_mode = "auto"
